# sentiment-analysis

./: dvc.yaml  evaluate.py  make_features.py  params.yaml  prepare_data.py  pyproject.toml  train.py
