[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Shrihari-Nair <shriharinair@htic.iitm.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
omegaconf = "^2.3.0"
scikit-learn = "^1.4.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
